* added modular programming example * fixed stretching issue with LaTeX proof trees * removed completed todo items * small updates to content and layout

--- a/styles/style.css
+++ b/styles/style.css
@@ -245,6 +245,10 @@ div.rules
 	min-width: 60px;
 	font-size: 20px;
 	margin-left: 0 10px;
+}
+
+.rule-text-left
+{
 	font-style: oblique;
 }
 
